--- a/ASSB/ASSB/ASSB.vcxproj
+++ b/ASSB/ASSB/ASSB.vcxproj
@@ -98,7 +98,8 @@
     <ClCompile Include="EventSystem\Event.cpp" />
     <ClCompile Include="EventSystem\EventSystem.cpp" />
     <ClCompile Include="EventSystem\ObjectEventManager.cpp" />
-    <ClCompile Include="FileIO\File.cpp" />
+    <ClCompile Include="FileSystem\AudioPreloader.cpp" />
+    <ClCompile Include="FileSystem\File.cpp" />
     <ClCompile Include="GameEngine\GameEngine.cpp" />
     <ClCompile Include="GameEngine\TransformComponent.cpp" />
     <ClCompile Include="Globals.cpp" />
@@ -121,7 +122,8 @@
     <ClInclude Include="EventSystem\ObjectEventManager.hpp" />
     <ClInclude Include="EventSystem\ODefines.hpp" />
     <ClInclude Include="Events\UISelectEvent.hpp" />
-    <ClInclude Include="FileIO\File.hpp" />
+    <ClInclude Include="FileSystem\AudioPreloader.hpp" />
+    <ClInclude Include="FileSystem\File.hpp" />
     <ClInclude Include="GameEngine\ComponentHandle.h" />
     <ClInclude Include="GameEngine\GameEngine.h" />
     <ClInclude Include="GameEngine\TransformComponent.h" />
