--- a/ASSB/ASSB/ASSB.vcxproj.filters
+++ b/ASSB/ASSB/ASSB.vcxproj.filters
@@ -203,6 +203,9 @@
     <ClInclude Include="Components\SpriteComponent.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GameEngine\Key.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="EventSystem\DelegateGlobalFunction.tpp">
