--- a/ASSB/ASSB/ASSB.vcxproj.filters
+++ b/ASSB/ASSB/ASSB.vcxproj.filters
@@ -123,6 +123,12 @@
     <ClCompile Include="PhsyicsSystem\CollisionInfo.cpp">
       <Filter>Source Files\PhysicsSystem</Filter>
     </ClCompile>
+    <ClCompile Include="Input\KeyboardState.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Input\Keyboard.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameEngine\GameEngine.h">
@@ -185,9 +191,6 @@
     <ClInclude Include="PhsyicsSystem\PhysicsSystem.hpp">
       <Filter>Header Files\PhysicsSystem</Filter>
     </ClInclude>
-    <ClInclude Include="Events\InputEvent.hpp">
-      <Filter>Header Files\Events</Filter>
-    </ClInclude>
     <ClInclude Include="FileSystem\LevelPreloader.hpp">
       <Filter>Header Files\FileSystem</Filter>
     </ClInclude>
@@ -206,11 +209,20 @@
     <ClInclude Include="Components\SpriteComponent.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="GameEngine\Key.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="PhsyicsSystem\CollisionInfo.hpp">
       <Filter>Header Files\PhysicsSystem</Filter>
+    </ClInclude>
+    <ClInclude Include="Input\KeyboardState.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Input\Key.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Input\Keyboard.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Events\KeyboardEvent.hpp">
+      <Filter>Header Files\Events</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
