+ Phsyics works + Moved preloading

--- a/ASSB/ASSB/ASSB.vcxproj
+++ b/ASSB/ASSB/ASSB.vcxproj
@@ -89,7 +89,6 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AudioSystem\AudioFile.cpp" />
-    <ClCompile Include="AudioSystem\AudioMapper.cpp" />
     <ClCompile Include="AudioSystem\AudioSystem.cpp" />
     <ClCompile Include="Components\Component.cpp" />
     <ClCompile Include="Components\RigidBodyComponent.cpp" />
@@ -102,7 +101,8 @@
     <ClCompile Include="EventSystem\Event.cpp" />
     <ClCompile Include="EventSystem\EventSystem.cpp" />
     <ClCompile Include="EventSystem\ObjectEventManager.cpp" />
-    <ClCompile Include="FileSystem\AudioPreloader.cpp" />
+    <ClCompile Include="FileSystem\ImagePreloadingMapper.cpp" />
+    <ClCompile Include="FileSystem\AudioPreloadingMapper.cpp" />
     <ClCompile Include="FileSystem\File.cpp" />
     <ClCompile Include="FileSystem\LevelPreloader.cpp" />
     <ClCompile Include="GameEngine\GameEngine.cpp" />
@@ -116,7 +116,6 @@
   <ItemGroup>
     <ClInclude Include="AudioSystem\AudioDefines.hpp" />
     <ClInclude Include="AudioSystem\AudioFile.hpp" />
-    <ClInclude Include="AudioSystem\AudioMapper.hpp" />
     <ClInclude Include="AudioSystem\AudioSystem.hpp" />
     <ClInclude Include="Components\Component.hpp" />
     <ClInclude Include="Components\RigidBodyComponent.hpp" />
@@ -134,7 +133,8 @@
     <ClInclude Include="EventSystem\ODefines.hpp" />
     <ClInclude Include="Events\InputEvent.hpp" />
     <ClInclude Include="Events\UISelectEvent.hpp" />
-    <ClInclude Include="FileSystem\AudioPreloader.hpp" />
+    <ClInclude Include="FileSystem\ImagePreloadingMapper.hpp" />
+    <ClInclude Include="FileSystem\AudioPreloadingMapper.hpp" />
     <ClInclude Include="FileSystem\File.hpp" />
     <ClInclude Include="FileSystem\LevelPreloader.hpp" />
     <ClInclude Include="GameEngine\ComponentHandle.h" />
